--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ font-family: 'Rokkitt', serif;
 #header{
     position: sticky;
     top: 0;
-    z-index: 10px;
+    z-index: 10;
     line-height: 30px;
 }
 
